Fix bugs (co2 emission calculator for car)

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -5,15 +5,14 @@ means_of_transport:
     1: "bike"
     2: "scooter"
     3: "bus"
-
   car:
     co2_emission:
-      0: 2.3 #for gasoline avg co2 emission
-      1: 2.7  #for diesel
-    default_avg_consumption: 10
+      "0": 100 #for gasoline avg co2 emission gCo2/km
+      "1": 120  #for diesel gCo2/km
+    default_avg_consumption: 10 #l/100km
     default_avg_fuel_price:
-      0: 6.52 #for gasoline
-      1: 6.70 #for diesel
+      "0": 6.52 #for gasoline
+      "1": 6.70 #for diesel
   scooter:
     start_price: 2.5 #All the data takes from blinkee
     cost_for_minute: 0.69
@@ -56,14 +55,14 @@ paid_parking:
   data: "paid_parking_zones/data"
   input_coordinates_format: "EPSG:4326"
   output_coordinates_format: "EPSG:2180"
-  parking_price: #for one hour that's our assumption - unit zł
+  parking_price: #based on official pricing for 2023 - we asssume parking for one hour
       I: 5
       II: 3
       III: 3
       IV: 3
 
 air_pollution:
-  default_sensor_id: 10125 #sensor umieszczony na ulicy piłsudskiego w Rzeszowie, jezeli brak wspolrzednych uzywany jako domyslny
+  default_sensor_id: 10125 #sensor on piłsudskiego street  in Rzeszów, if missing user location we use default
   sensor_list_data: "air_quality/data/sensors.json"
   air_pollution_url: "https://api.gios.gov.pl/pjp-api/rest/aqindex/getIndex/"
   air_index_key: "stIndexLevel"
